[project]
name = "llava-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "numpy<2",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "transformers>=4.57.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
